syntax = "proto3";

option csharp_namespace = "GrpcMongoService";

package profile;


service ProfileService {
	rpc UpdateProfile (UpdateProfileRequest) returns (UpdateProfileResponse);
	rpc GetProfile (GetProfileRequest) returns (GetProfileResponse);
}

message UpdateProfileRequest {
	string Guid = 1;
	string First_Name = 2;
	string Last_Name = 3;
	string Bio = 4;
	string Hometown = 5;
	string Occupation = 6;
	string ExternalLink = 7;
	string DateOfBirth = 8;
	string ProfilePictureUrl = 9;
	string CoverPictureUrl = 10;
}

message UpdateProfileResponse {
	string message = 1;
}

message GetProfileRequest {
	string Guid = 1;
}

message GetProfileResponse {
	string First_Name = 1;
	string Last_Name = 2;
	string Bio = 3;
	string Hometown = 4;
	string Occupation = 5;
	string ExternalLink = 6;
	string DateOfBirth = 7;
	string ProfilePictureUrl = 8;
	string CoverPictureUrl = 9;
}


